--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to Use the Lasso Tool on Adobe Illustrator</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Assembly time:</b> 10 Minutes<br>
+              <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Do you want to know how to use the Lasso tool in Adobe Illustrator? The Lasso tool is one of many selection tools you can use in Illustrator. It allows you to select many shapes and/or vector points at once by freely drawing around the objects you want to select Then you can move them around or manipulate them however you wish. This wikiHow article teaches you how to use the Lasso tool in Adobe Illustrator.</p>
 
           </div>
 
@@ -94,13 +94,11 @@ Add your Things You'll Need.
 ** Be careful to keep all the HTML tags intact when you are changing the text.
 -->         
             <ul class="list-of-items">
-              <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li><h2>Things You Should Know</h2></li>
+              <li>Click the Lasso tool to get started. It is represented by a mouse cursor over a lasso.</li>
+              <li>Freely draw around the shapes or vector points you want to select. Be sure to close the loop.</li>
+              <li>Click the Selection tool to move the selected lasso area as you wish.</li>
+            
             </ul>
           </aside>
         </div>
