--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Add your introduction to your step-by-step-guide, including a title, time requir
             <h1>How to Use the Lasso Tool on Adobe Illustrator</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 10 Minutes<br>
-              <b>Awesome rating:</b> 100% awesome</p>
+            <p><b>Assembly time:</b> 5 Minutes<br>
+              <b>Awesome rating:</b> 100% Awesome</p>
             <hr>
 
             <p>Do you want to know how to use the Lasso tool in Adobe Illustrator? The Lasso tool is one of many selection tools you can use in Illustrator. It allows you to select many shapes and/or vector points at once by freely drawing around the objects you want to select Then you can move them around or manipulate them however you wish. This wikiHow article teaches you how to use the Lasso tool in Adobe Illustrator.</p>
@@ -114,16 +114,19 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Open an Illustrator document in Adobe Illustrator.</h3>
+              <p>To do so, you can double-click an existing Illustrator (.ai) file, or double-click the Illustrator icon on your PC or Mac, and then click Create New on the title screen to create a new document Enter the desired height and width of your artboard and click Create.[1]
+Alternatively, you can create a new document at any time in Illustrator by clicking File in the menu bar at the top and then clicking New.</p> 
+               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Select the Lasso tool.</h3>
+              <p>It has an icon that resembles a mouse cursor over a lasso. You can find it in the toolbar, which is usually to the left. Alternatively, you can press "Q" on your keyboard to select the Lasso tool.</p>
 
               <!--
 This block contains a photo and has a caption.
