--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Open an Illustrator document in Adobe Illustrator.</h3>
-              <p>To do so, you can double-click an existing Illustrator (.ai) file, or double-click the Illustrator icon on your PC or Mac, and then click Create New on the title screen to create a new document Enter the desired height and width of your artboard and click Create.[1]
+              <p>To do so, you can double-click an existing Illustrator (.ai) file, or double-click the Illustrator icon on your PC or Mac, and then click Create New on the title screen to create a new document Enter the desired height and width of your artboard and click Create.
 Alternatively, you can create a new document at any time in Illustrator by clicking File in the menu bar at the top and then clicking New.</p> 
-               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+               <a href="https://live.staticflickr.com/65535/52873258654_cb5d64cf49.jpg" width="%" height="%" alt="screenshot one" ></a>         
             </div>
           </li>
 
