--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
               <h3>Open an Illustrator document in Adobe Illustrator.</h3>
               <p>To do so, you can double-click an existing Illustrator (.ai) file, or double-click the Illustrator icon on your PC or Mac, and then click Create New on the title screen to create a new document Enter the desired height and width of your artboard and click Create.
 Alternatively, you can create a new document at any time in Illustrator by clicking File in the menu bar at the top and then clicking New.</p> 
-               <a href="https://live.staticflickr.com/65535/52873258654_cb5d64cf49.jpg" width="%" height="%" alt="screenshot one" ></a>         
+               <a data-flickr-embed="true" href="https://www.flickr.com/photos/198251240@N02/52873258654/in/dateposted-public/" title="screenshot one"><img src="https://live.staticflickr.com/65535/52873258654_cb5d64cf49.jpg" width="%" height="%" alt="screenshot one"/></a>         
             </div>
           </li>
 
