--- a/index.html
+++ b/index.html
@@ -132,38 +132,57 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+             <a data-flickr-embed="true" href="https://www.flickr.com/photos/198251240@N02/52873086676/in/dateposted-public/" title="screenshot two"><img src="https://live.staticflickr.com/65535/52873086676_53a3b0e6be.jpg" width="%" height="%" alt="screenshot two"/></a>             
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Draw around the shapes and/or vector points you want to select.</h3>
+              <p>You can draw around one or more shapes and/or vector points. Draw a complete circle around the shapes and/or vectors you want to select.
+Unlike in Adobe Photoshop, the Lasso tool in Illustrator does not create a selection in the shape you draw. Instead, it selects all the shapes and vectors inside the shape you draw with the Lasso tool.
+For improved accuracy, you may want to zoom in on the area you want to select before using the Lasso tool.. To do so, press "Ctrl and +" (or "Command and +" on Mac) to zoom in. You can also click the magnifying glass icon in the toolbar to the left and then click on the area you want to zoom in on.
+If you do not draw a complete shape with the Lasso tool, Illustrator will automatically connect the ends of the shape for you.
+If you want to add more shapes or vectors to your selection, select the Lasso selection too. Hold Shift and draw around the shapes and/or vectors you want to add to your selection. To subtract objects or vector points from your hold "Alt" (or "Option" on Mac) and use the Lasso tool to draw around objects you want to subtract from your selection.</p>
+             <a data-flickr-embed="true" href="https://www.flickr.com/photos/198251240@N02/52873463900/in/dateposted-public/" title="screenshot three"><img src="https://live.staticflickr.com/65535/52873463900_5a6842c948.jpg" width="%" height="%" alt="screenshot three"/></a>
+             
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
             </div>
-
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Click the Selection tool or Subselection tool.</h3>
+              <p>The Selection tool has an icon that resembles a black mouse cursor in the toolbar to the left. The Selection tool allows you to move entire shapes. The Subselection tool has an icon that resembles a white mouse cursor in the toolbar to the left. The Subselection tool allows you to move individual vector points.
+Alternatively, you can press "V" on the keyboard to select the Selection tool, or press "A" on the keyboard to select the Subselection tool.</p>
+              <a data-flickr-embed="true" href="https://www.flickr.com/photos/198251240@N02/52873086671/in/dateposted-public/" title="screenshot four"><img src="https://live.staticflickr.com/65535/52873086671_31031c137a_w.jpg" width="%" height="%" alt="screenshot four"/></a>    
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Click and drag to move the selected shapes and/or vector points.</h3>
+              <p>This moves your selection.
+If you use the Subselection tool to move vector points from a shape that is not completely selected, this will warp and distort the shape.
+Alternatively, you can copy and paste your selection. To do so, press "Ctrl + C" (or "Command + C" on Mac) to copy the selection. Then press "Ctrl + V" (or "Command + V" on Mac) to paste the selection.
+You can also apply effects to your selection. To do so, click Effects in the menu bar at the top. Then click the effect you want to apply.</p>
+             <a data-flickr-embed="true" href="https://www.flickr.com/photos/198251240@N02/52873463930/in/dateposted-public/" title="screenshot five"><img src="https://live.staticflickr.com/65535/52873463930_9124c72835.jpg" width="%" height="%" alt="screenshot five"/></a>
             </div>
           </li>
+          
+          <li>
+            <div class="content">
+              <h3>Experiment and have fun.h3>
+              <p>There are lots of things you can do in Adobe Illustrator. Play around and see what you discover. Figure out creative ways to use the Lasso tool in conjunction with other Illustrator tools.</p>
+              <a data-flickr-embed="true" href="https://www.flickr.com/photos/198251240@N02/52873463910/in/dateposted-public/" title="screenshot six"><img src="https://live.staticflickr.com/65535/52873463910_f7f7b897c7.jpg" width="%" height="%" alt="screenshot six"/></a>
+            </div>
+          </li>
+
 
 
 
