--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#AF6E83;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#E4CFD6;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -294,9 +294,9 @@ Customise the visual style and appearance of your guide.
 
       /* Styles for unordered lists <ul> */
       ul {
-        font-family:"Courier New", Courier, monospace;
+        font-family:Arial, sans-serif;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #D3E3E8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #E09248;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
