--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:Arial, sans-serif;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #E09248;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
-        border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
+        background-color: #F7E4D1;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        border: 2px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
         position:relative;
@@ -323,7 +323,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #D3E3E8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #F7E4D1;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
