--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ Customise the visual style and appearance of your guide.
       hr {
         border: 0; 
         height: 0; 
-        border-top: 1px solid #D3E3E8; 
+        border-top: 1px solid #F7E4D1; 
       }
 
 
@@ -426,7 +426,7 @@ Customise the visual style and appearance of your guide.
         top:0;
         left:-40px;
         z-index:-1;
-        background: #D3E3E8; 
+        background: #F7E4D1; 
         border-top-left-radius: 50px;
         border-bottom-left-radius: 50px;
       }
